--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-aiohttp~=3.6.3
+aiohttp~=3.7.3
 requests~=2.25.0
-numpy~=1.19.4
+numpy==1.19.2
 matplotlib~=3.3.3
-discord.py~=1.5.1
+discord.py~=1.6.0
